fix: SecurityConfig / configuration.setAllowedOrigins(List.of("http://localhost:3000"));